add OCIF writer