@@ -1,10 +1,9 @@
 package com.graphinout.reader.ocif;
 
-import com.graphinout.base.gio.GioService;
 import com.graphinout.base.gio.GioReader;
+import com.graphinout.base.gio.GioService;
 import com.graphinout.base.gio.GioWriter;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class OcifService implements GioService {
@@ -16,12 +15,12 @@ public class OcifService implements GioService {
 
     @Override
     public List<GioReader> readers() {
-        return Arrays.asList(new OcifReader());
+        return List.of(new OcifReader());
     }
 
     @Override
     public List<GioWriter> writers() {
-        return List.of();
+        return List.of(new OcifWriter());
     }
 
 }
